fixing positioning of description and making leaderboard title visible when game over

--- a/small_arcade/css/styles.css
+++ b/small_arcade/css/styles.css
@@ -9,7 +9,7 @@ a {
 	font-family: monospace;
 	font-size: 15px;
 	float: right;
-	margin-top: -440px;
+	margin-top: -300px;
 	width: 20%;
 	margin-right: -10px;
 }
